[package]
name = "lucia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0.0-rc.7", features = ["derive"] }
mdns = "3.0.0"
futures-util = "0.3.19"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }